<resources>
    <string name="app_name">한가람앱</string>
    <string name="title_activity_main">한가람앱</string>
    <string name="action_help">도움말</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="today_meal">오늘의 급식이 돌아왔습니다!</string>

    <string name="navigation_drawer_menu_communicate">소통하는 한가람</string>
    <string name="navigation_drawer_menu_today_meal">오늘의 급식</string>
    <string name="navigation_drawer_menu_school_menu">학교 메뉴</string>
    <string name="navigation_drawer_menu_school_life">학교 생활</string>
    <string name="navigation_drawer_menu_settings">설정</string>

    <string name="todal_meal_button1">누르고 싶지? 헤헤</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_manage_data">데이터 관리</string>
    <string name="pref_delete_meal_db">급식 정보 삭제</string>
    <string name="pref_delete_meal_db_summary">기기에 저장된 급식 정보를 초기화합니다. 급식 관련 오류가 발생할 때 사용합니다.</string>
    <string name="pref_delete_timetable_db">시간표 정보 초기화</string>
    <string name="pref_delete_timetable_db_summary">기기에 저장된 시간표 정보를 초기화합니다. 학기가 바뀔 때 사용합니다.</string>
    <string name="pref_delete_schedule_db">일정 정보 초기화</string>
    <string name="pref_delete_schedule_db_summary">기기에 저장된 모든 일정 정보를 초기화합니다.</string>
    <string name="pref_delete_all_db">한가람앱 초기화</string>
    <string name="pref_delete_all_db_summary">한가람앱을 초기상태로 되돌립니다.</string>


    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="transition_name_today_meal_card">transition:TODAY_MEAL_CARD</string>
    <string name="transition_name_today_meal_text">transition:TODAY_MEAL_TEXT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
